# RobotApp

./: .gitignore  CMakeLists.txt  Makefile  README.md  armdetector.py  computervision.qrc
forms/: mainwindow.ui
include/: armmodel.h  armview.h
src/: armdetector.py  armmodel.cpp  armmodel.h  main.cpp  main.py  mainwindow.py  mainwindow_ui.py  robot3d.py
src/ui/: mainwindow.ui
src/xmlui/: mainwindow.ui
